@@ -38,6 +38,7 @@ WriteMakefile(
 	'Time::localtime' => 0,
 	'HTML::Lint' => 0,
 	'Storable' => 0,
+	'HTTP::Status' => 0,
     },
     dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean               => { FILES => 'FCGI-Buffer-*' },
