@@ -2,6 +2,7 @@ Revision history for FCGI-Buffer
 
 0.09
 	Honour the order of HTTP_ACCEPT_ENCODING
+	Improved handling of HTTP status
 
 0.08	Tue Oct  4 10:06:22 EDT 2016
 	Print stack trace when calling init too late
